feat: wip yaml defintion
